--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,34 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+h1{
+    font-family: 'Cinzel', serif;
+    font-size: 2rem;
+}
+
+p{
+    text-align: center;
+}
 body{
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
     padding: 0;
     margin: 0;
     margin-top: 10px;
+    background: fixed center;
+    background-image: 
+        linear-gradient(
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+        ),
+        url(
+            http://www.widehdimages.com/uploads/large/games/game-of-thrones-map-wallpaper.jpg
+        );
 }
-
 /* header */
 .logo img {
     width: 200px;
@@ -18,58 +43,146 @@ body{
 }
 
 ul {
-    margin-left: 30px;
-    text-align: left;
+    text-align: center;
     list-style-type: none;
     padding: 0;
 
 }
 
-/* main */
-/* .start-window */
-.start-window{
-    background-color: aqua;
-    height: 300px;
+ul li {
+    display: inline;
+    text-transform: uppercase;
 }
 
-.start-window h1 {
-    text-align: center;
-    padding-top: 100px;
+/* main */
+
+.container{
+    padding: 50px 20px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
-.start-btn {
+
+.container h1 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+.btn {
+    color: black;
+    font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
     display: block;
     margin: 50px auto 0;
-    width: 10rem;
+    width: 100%;
+    background-color: rgba(255, 180, 1, 0.8);
+    border: none;
+    padding: 10px 0;
+    text-transform: uppercase;
 }
 
+.btn:hover{
+    color:rgb(255, 180, 1);
+    background-color: rgba(0,0,0,0.8);
+    transition: 0.3s ease-in-out;
+
+}
+
+.btn-1{
+    width: 50%
+}
+
+.answer-icon {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 20px;
+}
+
+.answer-icon img{
+    width: 100%;
+}
+
+.correct-answer{
+    text-decoration: underline;
+    font-weight: 900;
+}
 /* .question-window */
-.question-window { 
-    background-color: aqua;
-}
-
-.question-window h1 {
-    padding-top: 20px;
-    text-align: center;
-}
-
 fieldset {
     border: none;
 }
 
 .answer-label {
     display: block;
-    background-color: white;
     line-height: 2;
-    border: 1px solid black;
-    border-collapse: collapse;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
 
-.submit-btn {
-    display: block;
-    margin: 30px auto;
-}
-
-/* other classes */
 .hidden{
     visibility: hidden;
+}
+
+input[type="radio"]{
+    margin: 5px 10px;
+    -webkit-appearance: none;
+    border: 2px solid white;
+    width: 15px;
+    height: 15px;
+    position: relative;
+    top: 5px;
+    border-radius: 50%;
+    transition: 0.2s linear;
+}
+
+input[type="radio"]:checked{
+    border: 7.5px solid #ffb400;
+
+}
+
+fieldset label{
+    background-color: rgba(71,71,69,0.5);
+}
+
+fieldset label:hover{
+    transition: 0.3s ease-in-out;
+    background-color:rgb(235, 202, 82, 0.4);
+}
+
+fieldset label:active{
+    background-color:rgb(235, 202, 82, 0.5);
+
+}
+
+.stats li:nth-child(1) {
+    margin-right: 30px;
+}
+
+
+@media (min-width: 720px){
+    header{
+        display: flex;
+        align-items: center;
+    }
+    .stats{
+        margin: 0 30px 0 auto;
+    }
+    .logo{
+        margin: 0 auto 0 30px;
+    }
+    .stats li:nth-child(1) {
+        margin-right: 100px;
+    }
+    .container{
+        margin: 0 10%;
+    }
+}
+
+@media (min-width: 1000px){
+    .container{
+        margin: 0 20%;
+    }
+}
+
+@media (min-width: 1440px){
+    .container{
+        margin: 0 30%;
+    }
 }
