--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+html { 
+    background: linear-gradient(
+                    rgba(0, 0, 0, 0.5),
+                    rgba(0, 0, 0, 0.5)
+                ),
+        url(
+            http://www.widehdimages.com/uploads/large/games/game-of-thrones-map-wallpaper.jpg
+        ) 
+        no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 
 h1{
     font-family: 'Cinzel', serif;
@@ -20,14 +34,6 @@ body{
     margin: 0;
     margin-top: 10px;
     background: fixed center;
-    background-image: 
-        linear-gradient(
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)
-        ),
-        url(
-            http://www.widehdimages.com/uploads/large/games/game-of-thrones-map-wallpaper.jpg
-        );
 }
 /* header */
 .logo img {
