--- a/styles.css
+++ b/styles.css
@@ -1,205 +1,266 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html { 
-    background: linear-gradient(
-                    rgba(0, 0, 0, 0.5),
-                    rgba(0, 0, 0, 0.5)
-                ),
-        url(
-            http://www.widehdimages.com/uploads/large/games/game-of-thrones-map-wallpaper.jpg
-        ) 
-        no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-
-h1{
-    font-family: 'Cinzel', serif;
-    font-size: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-p{
-    text-align: center;
+html {
+  background: linear-gradient(rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)),
+    url('assets/images/bg.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.dark {
+  background: black;
+  transition: 3s ease;
 }
 body{
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.2rem;
-    padding: 0;
-    margin: 0;
-    margin-top: 10px;
-    background: fixed center;
 }
+
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+  min-width: 320px;
+}
+
+h1 {
+  font-family: 'Cinzel', serif;
+}
+
+@media (max-width: 321px) {
+  h1 {
+    font-size: 7vw;
+    margin-top: 0;
+  }
+  .stats {
+    font-size: 0.99rem;
+  }
+  .container {
+    padding: 30px 0;
+    margin: 0 5%;
+  }
+  
+}
+
+@media (min-width: 322px) {
+  h1 {
+    font-size: 1.5em;
+  }
+  .container {
+    padding: 50px 0;
+    margin: 0 5%;
+  }
+  
+
+}
+
+p {
+  text-align: center;
+}
+
+body {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2rem;
+  padding: 0;
+  padding-top: 10px;
+  background: fixed center;
+}
+
 /* header */
 .logo img {
-    width: 200px;
+  width: 200px;
 }
 
 .logo {
-    text-align: center;
+  text-align: center;
 }
 
-.stats{
-    margin: 0 auto;
+.stats {
+  margin: 0 auto;
 }
 
 ul {
-    text-align: center;
-    list-style-type: none;
-    padding: 0;
+  text-align: center;
+  list-style-type: none;
+  padding: 0;
 
 }
 
 ul li {
-    display: inline;
-    text-transform: uppercase;
+  display: inline;
+  text-transform: uppercase;
+}
+
+li:nth-child(3) {
+  display: block;
+  margin-top: 5px;
 }
 
 /* main */
 
-.container{
-    padding: 50px 0;
-    margin: 0 5%;
-}
-
 .container h1 {
-    text-align: center;
-    margin-bottom: 30px;
+  text-align: center;
+  margin-bottom: 30px;
 }
+
 .btn {
-    color: black;
-    font-size: 1rem;
-    font-family: 'Montserrat', sans-serif;
-    display: block;
-    margin: 30px auto 0;
-    width: 100%;
-    background-color: rgba(255, 180, 1, 0.8);
-    border: none;
-    padding: 10px 0;
-    text-transform: uppercase;
+  color: black;
+  font-size: 1rem;
+  font-family: 'Montserrat', sans-serif;
+  display: block;
+  margin: 30px auto 0;
+  width: 100%;
+  background-color: rgba(255, 180, 1, 0.8);
+  border: none;
+  padding: 10px 0;
+  text-transform: uppercase;
 }
 
-.btn:hover{
-    color:rgb(255, 180, 1);
-    background-color: rgba(0,0,0,0.8);
-    transition: 0.3s ease-in-out;
-
+.btn:hover {
+  color: rgb(255, 180, 1);
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: 0.3s ease-in-out;
 }
 
-.btn-1{
-    width: 50%
+.btn-1 {
+  width: 50%
 }
 
 .answer-icon {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto 20px;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto 20px;
 }
 
 .result-icon {
-    margin: 0 auto 20px;
-    width: 200px;
-    height: 200px;
- }
-
-.answer-icon img, .result-icon img{
-    width: 100%;
+  margin: 0 auto 20px;
+  width: 200px;
+  height: 200px;
 }
 
-.correct-answer{
-    text-decoration: underline;
-    font-weight: 900;
+.answer-icon img,
+.result-icon img {
+  width: 100%;
 }
+
+.correct-answer {
+  text-decoration: underline;
+  font-weight: 900;
+}
+
 /* .question-window */
 fieldset {
-    border: none;
+  border: none;
 }
 
 .answer-label {
-    display: block;
-    line-height: 2;
-    margin-bottom: 10px;
-    cursor: pointer;
+  display: block;
+  line-height: 2;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
-.hidden{
-    visibility: hidden;
+.hidden {
+  visibility: hidden;
 }
 
-input[type="radio"]{
-    margin: 5px 10px;
-    -webkit-appearance: none;
-    border: 2px solid white;
-    width: 15px;
-    height: 15px;
-    position: relative;
-    top: 5px;
-    border-radius: 50%;
-    transition: 0.2s linear;
+input[type="radio"] {
+  margin: 5px 10px;
+  -webkit-appearance: none;
+  border: 2px solid white;
+  width: 15px;
+  height: 15px;
+  position: relative;
+  top: 5px;
+  border-radius: 50%;
+  transition: 0.2s linear;
 }
 
-input[type="radio"]:checked{
-    border: 7.5px solid #ffb400;
+input[type="radio"]:checked {
+  border: 7.5px solid #ffb400;
 
 }
 
-fieldset label{
-    background-color: rgba(0,0,0,0.3);
+fieldset label {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
-fieldset label:hover{
-    transition: 0.3s ease-in-out;
-    background-color:rgb(41, 148, 177, 0.4);
+fieldset label:hover {
+  transition: 0.3s ease-in-out;
+  background-color: rgb(41, 148, 177, 0.4);
 }
 
-fieldset label:active{
-    background-color:rgb(235, 202, 82, 0.5);
+fieldset label:active {
+  background-color: rgb(235, 202, 82, 0.5);
 
 }
 
 .stats li:nth-child(1) {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 
-@media (min-width: 720px){
-    header{
-        display: flex;
-        align-items: center;
-    }
-    .stats{
-        margin: 0 30px 0 auto;
-    }
-    .logo{
-        margin: 0 auto 0 30px;
-    }
-    .stats li:nth-child(1) {
-        margin-right: 100px;
-    }
-    .container{
-        margin: 0 10%;
-    }
+@media (min-width: 720px) {
+  .container {
+    margin: 0 10%;
+  }
 }
 
-@media (min-width: 1000px){
-    .container{
-        margin: 0 20%;
-    }
+@media (min-width: 1000px) {
+  .container {
+    margin: 0 20%;
+  }
+  header {
+    display: flex;
+    align-items: center;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+
+  .stats {
+    margin: 0 30px 0 auto;
+  }
+
+  .stats li:nth-child(3){
+    display: inline;
+  }
+
+  .logo {
+    margin: 0 auto 0 30px;
+  }
+
+  .stats li:nth-child(1), .stats li:nth-child(2) {
+    margin-right: 100px;
+  }
 }
 
-@media (min-width: 1340px){
-    .container{
-        margin: 0 25%;
-    }
+@media (min-width: 1340px) {
+  .container {
+    margin: 0 25%;
+  }
 }
 
-@media (min-width: 1600px){
-    .container{
-        margin: 0 30%;
-    }
+@media (min-width: 1600px) {
+  .container {
+    margin: 0 30%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
 }
