--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,16 @@ html,
 body {
   margin: 0;
   height: 100%;
-  overflow: hidden;
   min-width: 320px;
 }
 
 h1 {
   font-family: 'Cinzel', serif;
+}
+
+.start {
+  width: 100%;
+  display: block;
 }
 
 @media (max-width: 321px) {
@@ -86,21 +90,25 @@ body {
   margin: 0 auto;
 }
 
-ul {
+.stats ul {
   text-align: center;
-  list-style-type: none;
   padding: 0;
-
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 0 7%;
 }
 
-ul li {
-  display: inline;
+.stats ul li {
   text-transform: uppercase;
 }
 
-li:nth-child(3) {
-  display: block;
-  margin-top: 5px;
+.stats ul li:nth-child(1) {
+  text-align: left;
+}
+
+.stats ul li:nth-child(3) {
+  text-align: right;
 }
 
 /* main */
@@ -211,6 +219,10 @@ fieldset label:active {
   .container {
     margin: 0 10%;
   }
+
+  .stats ul {
+    margin: 0 13%;
+  }
 }
 
 @media (min-width: 1000px) {
@@ -226,18 +238,17 @@ fieldset label:active {
 
   .stats {
     margin: 0 30px 0 auto;
+    width: 60%;
+    padding: 0 0 0 auto;
   }
 
-  .stats li:nth-child(3){
-    display: inline;
+  .stats ul {
+    margin-left: 30%;
+    margin-right: 0;
   }
 
   .logo {
     margin: 0 auto 0 30px;
-  }
-
-  .stats li:nth-child(1), .stats li:nth-child(2) {
-    margin-right: 100px;
   }
 }
 
@@ -245,22 +256,13 @@ fieldset label:active {
   .container {
     margin: 0 25%;
   }
+  .stats ul {
+    margin-left: 50%
+  }
 }
 
 @media (min-width: 1600px) {
   .container {
     margin: 0 30%;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
-  html {
-    transform: rotate(-90deg);
-    transform-origin: left top;
-    width: 100vh;
-    overflow-x: hidden;
-    position: absolute;
-    top: 100%;
-    left: 0;
   }
 }
